@@ -2,6 +2,7 @@ ffmpeg (7:2.5.3-2) UNRELEASED; urgency=medium
 
   * Add patches making the build binary reproducible.
   * Stop using faketime.
+  * Correctly handle noopt in DEB_BUILD_OPTIONS.
 
  -- Andreas Cadhalpun <Andreas.Cadhalpun@googlemail.com>  Wed, 04 Feb 2015 23:22:30 +0100
 
